--- a/sass/partials/design/_banner.sass
+++ b/sass/partials/design/_banner.sass
@@ -294,10 +294,6 @@
           left: 0
           +breakpoint($bp-for-phone-only)
             top: 42px
-          .menu
-            padding-left: 35px
-            .menu
-              padding-left: 0
         h2
           color: $grey-hp-7
           .svg &
